# banijay-streamlit-app

./: README.md
.devcontainer/: devcontainer.json
banijay/: app.py  pyproject.toml
banijay/banijay/: app.py
banijay/data/: banijay_merged.csv  banijay_op1data_content_raw.pkl  banijay_op1data_ratings_raw.csv  banijay_op1data_twitter_raw.json
banijay/notebooks/: eda.ipynb
notebooks/: eda.ipynb
