[tool.poetry]
name = "banijay"
version = "0.1.0"
description = ""
authors = ["Nitin Bhushan <bhushan.nitin@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^1.5.3"
streamlit = "^1.20.0"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
ipykernel = "^6.21.3"
deep-translator = "^1.10.1"
num2words = "^0.5.12"
tqdm = "^4.65.0"
wordcloud = "^1.8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
